[metadata]
name = troika
version = attr: troika.VERSION
description = Submit, monitor and kill jobs on remote systems
long_description = file: README.md
long_description_content_type = text/markdown
url = https://git.ecmwf.int/projects/ECSDK/repos/troika/browse
author = Olivier Iffrig
author_email = olivier.iffrig@ecmwf.int
#classification = ...
license = Apache Software License 2.0

[options]
install_requires =
    pyyaml
packages = find_namespace:
package_dir =
    = src
tests_require =
    pytest

[options.entry_points]
console_scripts =
    troika = troika.cli:main
troika.connections =
    local = troika.connections.local:LocalConnection
    ssh = troika.connections.ssh:SSHConnection
troika.controllers =
    base = troika.controllers.base:Controller
troika.hooks.at_startup =
    check_connection = troika.hooks.common:check_connection
troika.hooks.pre_submit =
    create_output_dir = troika.hooks.common:create_output_dir
troika.hooks.at_exit =
    copy_submit_logfile = troika.hooks.common:copy_submit_logfile
    copy_kill_logfile = troika.hooks.common:copy_kill_logfile
troika.sites =
    direct = troika.sites.direct:DirectExecSite
    group = troika.sites.group:SiteGroup
    pbs = troika.sites.pbs:PBSSite
    slurm = troika.sites.slurm:SlurmSite
    trimurti = troika.sites.trimurti:TrimurtiSite

[options.packages.find]
where = src
