[metadata]
name = troika
version = attr: troika.VERSION
description = Submit, monitor and kill jobs on remote systems
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ecmwf/troika
author = Olivier Iffrig
author_email = software.support@ecmwf.int
#classification = ...
license = Apache Software License 2.0

[options]
install_requires =
    pyyaml
packages = find_namespace:
package_dir =
    = src
tests_require =
    pytest

[options.entry_points]
console_scripts =
    troika = troika.cli:main

[options.packages.find]
where = src
