[metadata]
name = troika
version = attr: troika.VERSION
description = Submit, monitor and kill jobs on remote systems
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ecmwf/troika
author = Olivier Iffrig
author_email = software.support@ecmwf.int
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX
    Programming Language :: Python :: 3.8
    Topic :: System :: Distributed Computing
license = Apache Software License 2.0

[options]
install_requires =
    pyyaml
packages = find_namespace:
package_dir =
    = src

[options.entry_points]
console_scripts =
    troika = troika.cli:main
troika.connections =
    local = troika.connections.local:LocalConnection
    ssh = troika.connections.ssh:SSHConnection
troika.controllers =
    base = troika.controllers.base:Controller
troika.hooks.at_startup =
    check_connection = troika.hooks.common:check_connection
troika.hooks.pre_submit =
    create_output_dir = troika.hooks.common:create_output_dir
    copy_orig_script = troika.hooks.common:copy_orig_script
troika.hooks.post_kill =
    abort_on_ecflow = troika.hooks.ecflow:abort_on_ecflow
troika.hooks.at_exit =
    copy_submit_logfile = troika.hooks.common:copy_submit_logfile
    copy_kill_logfile = troika.hooks.common:copy_kill_logfile
troika.translators =
    enable_hyperthreading = troika.translators.resources:enable_hyperthreading
    extra_directives = troika.translators.common:extra_directives
    join_output_error = troika.translators.common:join_output_error
troika.sites =
    direct = troika.sites.direct:DirectExecSite
    group = troika.sites.group:SiteGroup
    pbs = troika.sites.pbs:PBSSite
    slurm = troika.sites.slurm:SlurmSite

[options.extras_require]
docs =
    sphinx
tests =
    pytest

[options.packages.find]
where = src
